--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -50,6 +50,7 @@
     <th:block th:replace="~{subdirs :: subdirsModal}"></th:block>
     <script type="application/javascript" src="/js/dirsDatatables.js" defer></script>
     <script type="application/javascript" src="/js/datatables.js" defer></script>
+    <script type="application/javascript" src="/js/subdirsDatatables.js" defer></script>
 </div>
 </body>
 </html>
