--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -26,7 +26,7 @@
                         <input type="text" class="form-control" id="path2dir" placeholder="/path/to/dir" name="path"/>
                         <span class="help-block">Для ОС Windows путь должен выглядеть как: c:\path\to\dir</span>
                     </div>
-                    <button type="button" class="btn btn-info" onclick="save()">Добавить</button>
+                    <button type="submit" class="btn btn-info">Добавить</button>
                 </div>
             </form>
             <p>
