--- a/src/main/resources/templates/subdirs.html
+++ b/src/main/resources/templates/subdirs.html
@@ -22,7 +22,7 @@
                 </table>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
 
