--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,8 +29,7 @@
                     <button type="submit" class="btn btn-info">Добавить</button>
                 </div>
             </form>
-            <p>
-            <h3>Список каталогов и файлов</h3></p>
+            <h3>Список каталогов и файлов</h3>
             <!-- Таблица -->
             <table class="table table-striped display" id="dirsTable">
                 <thead>
